docker_kubernetes/app/azure-deployment/journeyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journey-service-deployment
  labels:
    app: journey-service
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: journey-service
  template:
    metadata:
      labels:
        app: journey-service       
    spec:
      containers:
        - name: journey-service
          image: ghcr.io/aleksandrakrasteva/journey-service:main
          imagePullPolicy: Always
          ports: 
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: journey-service-service
spec:
  selector:
    app: journey-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
